[gd_scene load_steps=3 format=3 uid="uid://c0yrhpggtuifq"]

[ext_resource type="Script" uid="uid://cc26jou0o3fdk" path="res://scripts/desk.gd" id="1_b51fv"]

[sub_resource type="CanvasTexture" id="CanvasTexture_r4fk6"]

[node name="Desk" type="Node2D"]
script = ExtResource("1_b51fv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_r4fk6")

[node name="MonthSwitchboardButton" type="Button" parent="CanvasLayer"]
offset_left = 331.0
offset_top = 104.0
offset_right = 764.0
offset_bottom = 189.0

[node name="DaySwitchboardButton" type="Button" parent="CanvasLayer"]
offset_left = 257.0
offset_top = 222.0
offset_right = 357.0
offset_bottom = 476.0

[node name="YearSwitchboardButton" type="Button" parent="CanvasLayer"]
offset_left = 388.0
offset_top = 205.0
offset_right = 721.0
offset_bottom = 444.0

[node name="TimeMachineButton" type="Button" parent="CanvasLayer"]
offset_left = 843.0
offset_top = 279.0
offset_right = 1065.0
offset_bottom = 400.0

[connection signal="pressed" from="CanvasLayer/MonthSwitchboardButton" to="." method="_on_month_switchboard_button_pressed"]
[connection signal="pressed" from="CanvasLayer/DaySwitchboardButton" to="." method="_on_day_switchboard_button_pressed"]
[connection signal="pressed" from="CanvasLayer/YearSwitchboardButton" to="." method="_on_year_switchboard_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TimeMachineButton" to="." method="_on_time_machine_button_pressed"]
